--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ a:hover, a:active, a:focus { /* this group of selectors will give a keyboard nav
 <td width=25%></td>
 <td width=14% align=right><font size="14" face="Arial" color=#ADDFFF align=right><b>ALEXANDER<br>KEIL</b></font></td> 
 <td width=1%></td>
-<td width=35% align=left><a href="http://www.unc.edu/~akeil/" target= "_same"><img src="img/header_simple.png" width="350" height="218"  alt="on your right"></a></td>
+<td width=35% align=left><a href="https://alexpkeil1.github.io/" target= "_same"><img src="img/header_simple.png" width="350" height="218"  alt="on your right"></a></td>
 <td width=25%></td>
 </tr>
 </table>
