--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <script type="application/ld+json">
 {
   "@context" : "http://schema.org",
-  "@type" : "LocalBusiness",
+  "@type" : "Researcher",
   "name" : "Alexander Keil"
 }
 </script>
