--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                        displayMath: [['\\[','\\]'], ['$$','$$']]}});
 </script>
 <script type="text/javascript"
-  src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 </script>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Alexander Keil</title>
@@ -143,37 +143,7 @@ a:hover, a:active, a:focus { /* this group of selectors will give a keyboard nav
 <td width=25%>
 <br><br>
 <center>
-<script src="http://widgets.twimg.com/j/2/widget.js"></script>
-<script>
-new TWTR.Widget({
-  version: 2,
-  type: 'profile',
-  rpp: 4,
-  interval: 6000,
-  width: 250,
-  height: 300,
-  theme: {
-    shell: {
-      background: '#333333',
-      color: '#ffffff'
-    },
-    tweets: {
-      background: '#010b3d',
-      color: '#ffffff',
-      links: '#fa4a0a'
-    }
-  },
-  features: {
-    scrollbar: false,
-    loop: false,
-    live: false,
-    hashtags: true,
-    timestamp: true,
-    avatars: false,
-    behavior: 'all'
-  }
-}).render().setUser('epidemiologylww').start();
-</script>
+<a class="twitter-timeline" href="https://twitter.com/PronouncedKeil?ref_src=twsrc%5Etfw">Tweets by PronouncedKeil</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
 </center>
 </td>
 
