--- a/index.html
+++ b/index.html
@@ -146,7 +146,10 @@ a:hover, a:active, a:focus { /* this group of selectors will give a keyboard nav
 <!-- 
 <a class="twitter-timeline" href="https://twitter.com/PronouncedKeil?ref_src=twsrc%5Etfw">Tweets by PronouncedKeil</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
 -->
+<a class="twitter-timeline" data-lang="en" data-height="500" data-theme="dark" href="https://twitter.com/PronouncedKeil?ref_src=twsrc%5Etfw">Tweets by PronouncedKeil</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+<!-- 
 <a href="https://twitter.com/PronouncedKeil?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @PronouncedKeil</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+-->
 </center>
 </td>
 
