--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ a:hover, a:active, a:focus { /* this group of selectors will give a keyboard nav
     <br>
     My GitHub page is <a href="https://github.com/alexpkeil1">here</a>.  </p>
   <p><a href="https://cirl-unc.github.io/SuperLearnerMacro/">Super learner</a> SAS macro<br>
-  <p><a href="https://cran.r-project.org/web/packages/qgcomp/index.html"><img src="img/qgcomphex.png" alt="" width="100"/></a><a href="https://cran.r-project.org/web/packages/bkmrhat/index.html"><img src="img/bkmrhex.png" alt="" width="100"/><a href="https://cran.r-project.org/web/packages/metropolis/index.html"><img src="img/metropolishex.png" alt="" width="100"/></a></p>
+  <p><a href="https://cran.r-project.org/web/packages/qgcomp/index.html"><img src="img/qgcomphex.png" alt="" width="100"/></a><a href="https://cran.r-project.org/web/packages/bkmrhat/index.html"><img src="img/bkmrhex.png" alt="" width="100"/><a href="https://cran.r-project.org/web/packages/metropolis/index.html"><img src="img/metropolishex.png" alt="" width="100"/></a><a href="https://github.com/alexpkeil1/vibr"><img src="img/vibrhex.png" alt="" width="100"/></a></p>
   <p><a href="threat.html">Here</a> is our greatest environmental threat.<br>
     <br>
     Mailing Address:<br>
